# anvil

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  PROMPT_build.md  PROMPT_plan.md  README.md  loop.sh  pyproject.toml
patches/: README.md
specs/: CHANGELOG.md  ai-provider-abstraction.md  architecture.md  ats-scoring-model.md  cli-interface.md  composition-pipelines.md  data-model.md  design-principles.md  devforge-theme.md  feature-tracker.md  fork-maintenance.md  migration-compatibility.md  open-questions.md  problem-statement.md  success-criteria.md  testing-strategy.md
src/anvilcv/: __init__.py  __main__.py  exceptions.py
src/anvilcv/ai/: anthropic.py  ollama.py  openai.py  output_parser.py  provider.py  token_budget.py
src/anvilcv/cli/: app.py  entry_point.py  export_command.py  job_input.py  provider_resolver.py
src/anvilcv/cover/: __init__.py  generator.py
src/anvilcv/github/: cache.py  entry_generator.py  (+2 more)
tests/: conftest.py
tests/corpus/: classic_all_entry_types.yaml  classic_basic.yaml  classic_empty_sections.yaml  classic_full.yaml  classic_minimal.yaml  classic_photo.yaml  classic_unicode.yaml  devforge_engineer.yaml  devforge_full.yaml  engineeringclassic_career_changer.yaml  engineeringclassic_design_overrides.yaml  engineeringclassic_devops.yaml  engineeringresumes_new_grad.yaml  engineeringresumes_publications.yaml  engineeringresumes_swe.yaml  moderncv_academic.yaml  moderncv_designer.yaml  moderncv_minimal.yaml  sb2nov_academic.yaml  sb2nov_dates_edge.yaml  sb2nov_software_engineer.yaml
tests/golden/: conftest.py  evaluator.py  test_golden_cover.py  test_golden_prep.py  test_golden_tailor.py
tests/integration/: test_cli_pipeline.py  test_fork_integrity.py
tests/unit/: test_cover.py  test_coverage_gaps.py  test_devforge_theme.py  test_export.py  test_foundation.py  test_prep.py  test_utils.py
(+131 files in other folders)
